When resolving the glyphs needed to measure a text that doesn't fit, we have to ensure that we remain at a word boundary. We may have to back up past the current font, in which case we have to reselect previous fonts to deal with the part of the string being chopped off, bug 241485, r=jshin, sr=tor